--- a/frontend/cervantes/package.json
+++ b/frontend/cervantes/package.json
@@ -19,7 +19,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.5",
     "react-native-render-html": "^6.3.4",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
