--- a/frontend/cervantes/package.json
+++ b/frontend/cervantes/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cervantes",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,17 +10,27 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/slider": "^4.5.0",
     "axios": "^1.6.8",
     "expo": "~50.0.13",
+    "expo-constants": "~15.4.5",
     "expo-document-picker": "~11.10.1",
     "expo-file-system": "~16.0.8",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-countdown-circle-timer": "^3.2.1",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
