--- a/frontend/cervantes/package.json
+++ b/frontend/cervantes/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/slider": "^4.5.0",
     "axios": "^1.6.8",
     "expo": "~50.0.13",
@@ -31,7 +32,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "expo-clipboard": "~5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
